Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114055

Recorder sample app uses unlimited amount of memory

XMLWordPrintable

    • Windows
    • ed7f8234d (dev), b6636521a (6.6), 3b68671c8 (6.5)

      The qffmpegencoder has an internal queue that buffers video frames when the encoder is unable to keep up with the frame source. This helps stabilizing the frame rate in case of intermittent encoder hiccups, but if the encoder is consistently unable to keep up with the frame source, the queue will grow and eventually the process will run out of memory. This happens on Windows with H264 encoding and FFMPEG plugin on a 4K monitor.
       
      Reproduce
      1. Run Recorder app on Windows at 4K screen resolution
      2. Record data while monitoring task manager
       
      Expected result
      Recorder memory usage stays stable and does not grow after recording has warmed up.
       
      Actual result
      Recorder memory usage grows continuously
       

        For Gerrit Dashboard: QTBUG-114055
        # Subject Branch Project Status CR V

            jogerh Jøger Hansegård (Inactive)
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes